<resources>
    <string name="app_name">MealsDistributor</string>
    <string name="login_hint">Login</string>
    <string name="password">Hasło</string>
    <string name="confirm_password">Powtórz hasło</string>
    <string name="login_button">Zaloguj</string>
    <string name="register_yourself">Zarejestruj się…</string>
    <string name="email">E-mail</string>
    <string name="register">Zarejestruj</string>
    <string name="hello_navbar">Witaj,</string>
    <string name="restaurants">Restauracje</string>
    <string name="home">Strona startowa</string>
    <string name="pyszne_pl">PYSZNE</string>
    <string name="phone_number">Tel.</string>
    <string name="add_restaurant">Nowa resturacja</string>
    <string name="restaurant_name_hint">Nazwa*</string>
    <string name="restaurant_name_long_hint">Nazwa restauracji*</string>
    <string name="add_restaurant_title">Dodaj nową restaurację</string>
    <string name="restaurant_phone_number">Numer telefonu*</string>
    <string name="restaurant_min_order_cost">Minimalny koszt zamówienia</string>
    <string name="restaurant_min_order_cost_colon">Minimalny koszt zamówienia:</string>
    <string name="restaurant_delivery_cost">Koszt dostawy</string>
    <string name="restaurant_delivery_cost_colon">Koszt dostawy:</string>
    <string name="restaurant_free_delivery_cost">Koszt darmowej dostawy</string>
    <string name="restaurant_free_delivery_cost_colon">Koszt darmowej dostawy:</string>
    <string name="cancel">Anuluj</string>
    <string name="add">Dodaj</string>
    <string name="is_pyszne">Restauracja widnieje w portalu Pyszne.pl</string>
    <string name="restaurant_details">Szczegóły restauracji</string>
    <string name="example">Example text</string>
    <string name="additional_info">Dodatkowe informacje:</string>
    <string name="example_price">1000.00 zł.</string>
    <string name="delete">Usuń</string>
    <string name="edit">Edytuj</string>
    <string name="no_info">Brak informacji</string>
    <string name="edit_restaurant_title">Edycja restauracji</string>
    <string name="save">Zapisz</string>
    <string name="add_meal">Dodaj posiłek</string>
    <string name="to_meals_arrow">Posiłki &#xf054;</string>
    <string name="meal_name_hint">Nazwa*</string>
    <string name="meal_description_hint">Opis*</string>
    <string name="meal_price_hint">Cena*</string>
    <string name="meal_start_date_hint">Dostępny od</string>
    <string name="add_meal_title">Dodaj nowy posiłek</string>
    <string name="date_picker_title">Wybierz datę:</string>
    <string name="meal_end_date_hint">Dostępny do</string>
    <string name="meal_details">Szczegóły posiłku</string>
    <string name="meal_start_date_colon">Dostępny od:</string>
    <string name="example_date">29 sty 2019</string>
    <string name="example_long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin egestas tincidunt tortor vel imperdiet. Maecenas sit amet fringilla felis. Integer at turpis interdum, tempor est ac, placerat elit. In velit tellus, vestibulum at porta at, accumsan id ipsum. Fusce imperdiet turpis rhoncus, sodales ipsum nec, dignissim sem. Pellentesque lacinia lectus at dapibus placerat. Nullam nisi ligula, laoreet id bibendum in, auctor et enim. Aliquam ante enim, dictum sit amet magna a, ornare sagittis quam. Aliquam nec bibendum erat, quis luctus odio. Duis sed porttitor metus. Donec aliquam luctus lacus sit amet finibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Mauris tristique malesuada urna rhoncus consectetur. Donec posuere, felis vel aliquet facilisis, nulla arcu vulputate elit, eu maximus ipsum tortor eu nibh.</string>
    <string name="edit_meal_title">Edycja posiłku</string>
    <string name="add_order_proposition">Nowa oferta zamówienia</string>
    <string name="order_proposition">Propozycje zamówień</string>
    <string name="add_order_proposition_title">Dodaj nową propozycję zamówień</string>
    <string name="order_proposition_order_time">Godzina zamówienia</string>
    <string name="order_proposition_form_order_time">Godzina zamówienia*</string>
    <string name="example_time">12:00</string>
    <string name="stopped">Koniec zamówień</string>
    <string name="example_uuid">3fa85f64</string>
    <string name="order_proposition_id">Identyfikator</string>
    <string name="available_order_proposition">Dostępne propozycje zamówień</string>
</resources>
