<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_add_order_proposition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/top_bar">

    <TextView
        android:id="@+id/tv_add_order_proposition_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/add_order_proposition_title"
        android:textSize="@dimen/h5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_order_proposition_form_restaurant"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FFF"
        app:boxStrokeColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_order_proposition_title">

        <AutoCompleteTextView
            android:id="@+id/auto_order_proposition_form_restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/restaurant_name_long_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_order_proposition_form_order_time"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/order_proposition_form_order_time"
        app:boxStrokeColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_order_proposition_form_restaurant">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_order_proposition_form_order_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="datetime" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_order_proposition_form_order_time">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_order_proposition_go_back"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/warningButtonColor"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/defaultTextColor"
            android:textSize="@dimen/body_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_order_proposition_accept"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/defaultButtonColor"
            android:text="@string/add"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/defaultTextColor"
            android:textSize="@dimen/body_1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
